[project]
name = "sac-en-ciel"
version = "0.1.0"
description = "Rainbow DQN et SAC discret avec CleanRL"
requires-python = ">=3.9, <3.11"
dependencies = [
    "torch>=2.3.0",
    "gymnasium[atari]>=0.29.0",
    "tyro>=0.8.0",
    "ale-py>=0.9.0",
    "shimmy>=1.3.0",
    "opencv-python>=4.9.0",
    "setuptools==69.5.1",
    "tensorboard==2.14.0",
    "numpy==1.26.4",
    "moviepy>=2.2.1",
    "psutil>=7.2.2",
    "pynvml>=13.0.1",
]

[tool.uv]
[dependency-groups]
dev = [
    "ipykernel",
]
